# Comp_graphics

./: CMakeLists.txt  README.md  geometry.c  geometry.h  main(double zuff).c  main(with artifacts).c  main.c  makefile  model.c  tga.c  tga.h
head/: african_head_diffuse.tga
